--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ click = "8.1.3"
 requests = "2.28.1"
 docker = "6.0.0"
 misilelibpy = { path = "misilelib/misilelib-python" }
+tomli = "2.0.1"
 
 [build-system]
 requires = ["poetry-core"]
